--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "css-loader": "^0.28.4",
+    "jquery": "^3.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
