--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "css-loader": "^0.28.4",
+    "draggabilly": "^2.1.1",
     "jquery": "^3.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
